--- a/project/package.json
+++ b/project/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.22.13",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "sonner": "^1.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
